--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <section>
         <div id="carousel-div" data-bs-ride="carousel" style="position: relative;">
             <div
-                style="position: absolute; background-color: rgba(0, 0, 0, 0.583); z-index: 29; text-align: end; width: 100%; height: 100%; display: flex; align-items: center; flex-direction: column; padding-top: 50px;">
-                <img alt="logo" src="assets/images/logo_full_light.png" style="height: 300px;" />
+                style="position: absolute; background-color: rgba(0, 0, 0, 0.583); z-index: 29; text-align: end; width: 100%; height: 100%; display: flex; align-items: center; flex-direction: column; padding-top: 5%;">
+                <img alt="logo" src="assets/images/logo_full_light.png" style="width: 20%;" />
 
                 <h4
-                    style="margin-bottom: 20px; color: rgb(255, 255, 255); z-index: 30; text-align: center; width: 100%; font-style: italic;">
+                    style="margin-bottom: 20px; color: rgb(255, 255, 255); z-index: 30; text-align: center; width: 100%; font-style: italic; font-size: 1rem;">
                     "Where Every Bite is a Joyful Discovery!"</h4>
             </div>
             <div id="carouselExampleCaptions" class="carousel slide" style="max-height: 500px; position: relative;">
