--- a/contact_us.html
+++ b/contact_us.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-auto" style="display: flex;justify-content: center;">
                     <button type="submit"
-                        style="margin-left: auto; margin-right: auto; border-radius: 5px; background-color: #2a3725;">Submit</button>
+                        style="margin-left: auto; margin-right: auto; border-radius: 5px; background-color: #2a3725; margin-bottom: 20px;">Submit</button>
                 </div>
             </form>
         </div>
