--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="nav"></div>
     <script src="assets/js/nav.js"></script>
     <!-- CODE BELOW -->
-    <section>
+    <section style="padding: 0px !important;">
         <div id="carousel-div" data-bs-ride="carousel" style="position: relative;">
             <div
                 style="position: absolute; background-color: rgba(0, 0, 0, 0.583); z-index: 29; text-align: end; width: 100%; height: 100%; display: flex; align-items: center; flex-direction: column; padding-top: 5%;">
