--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@
         <div class="main-div"
             style="display: flex; flex-wrap: wrap; justify-content: center; max-width: 1300px; flex-direction: column; align-items: center; margin-left: auto; margin-right: auto;">
             <div class="card-body" style="max-width: 800px; width: 100%;">
-                <h5 style="text-align: center;" class="card-title">At Treasure Delight's Cafe, we invite you to
+                <h5 style="text-align: center;" class="card-title">At Treasure Delights Cafe, we invite you to
                     embark on a culinary journey
                     filled with delight and discovery. Nestled in
                     the heart of Papine, our cozy cafe is a treasure trove of flavors, aromas, and warm
                     hospitality.</h5>
                 <br />
-                <p style="text-align: center;">FOUNDED IN 2020, We provides real authentic Jamaican cafe experience.
+                <p style="text-align: center;">FOUNDED IN 2020, We provide real authentic Jamaican cafe experience.
                     Our founder wanted to share his family recipes that have
                     been passed down for generations. All of our dishes are made with lots of care and love. They
                     are made to taste as good
                     as having dinner in our home in Jamaica.
 
-                    Kingston Cafe Dish currently operates in Farmers Markets, while also providing catering services
+                    Treasure Delights Cafe currently operates in Farmers Markets, while also providing catering services
                     for your special
-                    events. Our catering services are perfect for any sized event, big or small.
+                    events. Our catering services are perfect for any size event, big or small.
 
                     Contact us today to get started!</p>
 
@@ -105,7 +105,7 @@
                     style="width: inherit; max-width: 400px;" />
             </div>
 
-            <p style="height: inherit;  max-width: 400px; padding: 20px;">Are you passionate about Step into our
+            <p style="height: inherit;  max-width: 400px; padding: 20px;">Are you passionate about food? Step into our
                 charming oasis and let your senses come alive. From the moment you walk through our doors, you'll be
                 greeted with the tantalizing scent of freshly brewed coffee and artisanal pastries. Our vibrant ambiance
                 and welcoming
@@ -137,7 +137,7 @@
                     style="width: inherit; max-width: 400px;" />
             </div>
 
-            <p style="height: inherit;  max-width: 400px; padding: 20px;">At Treasure Delight's Cafe, we're more than
+            <p style="height: inherit;  max-width: 400px; padding: 20px;">At Treasure Delights Cafe, we're more than
                 just a place to grab a bite – we're a gathering place for friends, family,
                 and neighbors. It's where connections are made, stories are shared, and memories are created. Join us
                 for a cup of
