--- a/menu.html
+++ b/menu.html
@@ -34,9 +34,9 @@
             </div>
             <div class="card-body" style="max-width: 800px; width: 100%;">
 
-                <p style="text-align: center;">Our menu at Treasure Delight's Cafe is a celebration of flavor,
+                <p style="text-align: center;">Our menu at Treasure Delights Cafe is a celebration of flavor,
                     freshness, and culinary craftsmanship. Each dish is
-                    carefully curated to tantalize your taste buds and leave you craving more. From breakfast favorites
+                    carefully curated to tantalize your taste buds and leave you craving for more. From breakfast favorites
                     to indulgent
                     desserts, every bite is a treasure waiting to be savored.</p>
 
