--- a/catering.html
+++ b/catering.html
@@ -18,7 +18,7 @@
     <!-- CODE BELOW -->
 
     <h1 style="margin-top: 50px; margin-bottom: 50px; color: rgb(49, 49, 49); text-align: center;">Cater Your Next Event
-        with Treasure Delight's Cafe!</h1>
+        with Treasure Delights Cafe!</h1>
     <section style="margin-bottom: 50px;">
 
         <div class="main-div"
@@ -36,7 +36,7 @@
             <div class="card-body" style="max-width: 800px; width: 100%;">
 
                 <p style="text-align: center;">Elevate your next gathering with the exquisite flavors and impeccable
-                    service of Treasure Delight's Cafe Catering.
+                    service of Treasure Delights Cafe Catering.
                     Whether you're hosting a corporate luncheon, a wedding celebration, or a special event with friends
                     and family, our
                     catering service is your recipe for success.</p>
@@ -86,14 +86,14 @@
 
 
 
-            <p style="text-align: center;">When you choose Treasure Delight's Cafe Catering, you can trust that you're
+            <p style="text-align: center;">When you choose Treasure Delights Cafe Catering, you can trust that you're
                 getting the highest quality ingredients and
                 impeccable attention to detail. We source the freshest seasonal produce, premium meats, and artisanal
                 ingredients to
                 create dishes that are as delicious as they are memorable. Your satisfaction is our top priority, and
                 we'll stop at
                 nothing to ensure that every bite is a delight.</p>
-            <p style="text-align: center;">Ready to take your event to the next level? Contact Treasure Delight's Cafe
+            <p style="text-align: center;">Ready to take your event to the next level? Contact Treasure Delights Cafe
                 Catering today to discuss your catering
                 needs and start planning an unforgettable culinary experience. Whether you're hosting an intimate
                 gathering or a grand
