--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
             <h1 style="text-align: center;">Welcome to Treasure Delight's Cafe!</h1>
             <p style="text-align: center;">At Treasure Delight's Cafe, we believe that every dining experience should be
                 a journey of joy and discovery. Nestled in
-                the heart of [Your Location], our cozy cafe is a hidden gem waiting to be explored. From the moment you
+                the heart of Gordon Town, our cozy cafe is a hidden gem waiting to be explored. From the moment you
                 walk through our
                 doors, you'll be transported to a world where great food, warm hospitality, and unforgettable memories
                 come together to
@@ -98,11 +98,11 @@
                     community,
                     and
                     creating moments of happiness. Founded
-                    by [Founder's Name] in [Year], our cafe has quickly become a beloved destination for locals and
+                    by Tamara Treasure in 2010, our cafe has quickly become a beloved destination for locals and
                     visitors
                     alike.
                     Inspired
-                    by the rich culinary traditions of [Your Region] and infused with a spirit of creativity and
+                    by the rich culinary traditions of the Caribbean and infused with a spirit of creativity and
                     innovation,
                     our
                     menu is a
