--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
 
 
 
-            <h1 style="text-align: center;">Welcome to Treasure Delight's Cafe!</h1>
-            <p style="text-align: center;">At Treasure Delight's Cafe, we believe that every dining experience should be
+            <h1 style="text-align: center;">Welcome to Treasure Delights Cafe!</h1>
+            <p style="text-align: center;">At Treasure Delights Cafe, we believe that every dining experience should be
                 a journey of joy and discovery. Nestled in
                 the heart of Gordon Town, our cozy cafe is a hidden gem waiting to be explored. From the moment you
                 walk through our
@@ -94,7 +94,7 @@
                 style="padding: 10px; max-width: 400px; display: flex; flex-wrap: wrap; justify-content: center;  flex-direction: column; align-items: center; margin-left: auto; margin-right: auto;">
 
                 <h1 style="text-align: center;">Our Story</h1>
-                <p style="text-align: center;">Treasure Delight's Cafe was born out of a shared passion for food,
+                <p style="text-align: center;">Treasure Delights Cafe was born out of a shared passion for food,
                     community,
                     and
                     creating moments of happiness. Founded
@@ -113,7 +113,7 @@
                 style="padding: 10px; max-width: 400px; display: flex; flex-wrap: wrap; justify-content: center; flex-direction: column; align-items: center; margin-left: auto; margin-right: auto;">
 
                 <h1 style="text-align: center;">Our Philosophy</h1>
-                <p style="text-align: center;">At Treasure Delight's Cafe, we believe in the power of food to nourish
+                <p style="text-align: center;">At Treasure Delights Cafe, we believe in the power of food to nourish
                     the body and feed the soul. That's why we're
                     committed to using only the finest ingredients, sourced from local farmers and producers whenever
                     possible. From our
@@ -138,7 +138,7 @@
             style="padding: 10px; max-width: 600px; display: flex; flex-wrap: wrap; justify-content: center; flex-direction: column; align-items: center; margin-left: auto; margin-right: auto;">
 
             <h1 style="text-align: center;">Our Promise</h1>
-            <p style="text-align: center;">When you dine at Treasure Delight's Cafe, you're not just a customer – you're
+            <p style="text-align: center;">When you dine at Treasure Delights Cafe, you're not just a customer – you're
                 a cherished guest. Our team of friendly
                 and dedicated staff is here to welcome you with open arms and ensure that your experience with us is
                 nothing short of
