--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
                     community,
                     and
                     creating moments of happiness. Founded
-                    by Tamara Treasure in 2010, our cafe has quickly become a beloved destination for locals and
+                    by Ms. Tamara Treasure in 2010, our cafe has quickly become a beloved destination for locals and
                     visitors
                     alike.
                     Inspired
@@ -140,11 +140,11 @@
             <h1 style="text-align: center;">Our Promise</h1>
             <p style="text-align: center;">When you dine at Treasure Delights Cafe, you're not just a customer – you're
                 a cherished guest. Our team of friendly
-                and dedicated staff is here to welcome you with open arms and ensure that your experience with us is
+                and dedicated staff is here to welcome you, your family and friends with open arms and ensure that your experience with us is
                 nothing short of
-                extraordinary. Whether you're stopping by for a quick coffee and pastry or settling in for a leisurely
+                extraordinary. Whether you're stopping by for a quick coffee and pastry, settling in for a leisurely
                 meal with
-                friends, we'll go above and beyond to make you feel at home.</p>
+                friends or even a business meeting, we'll go above and beyond to make you feel at home.</p>
 
         </div>
     </section>
